[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/fonts/MPLUSRounded/MPLUSRounded1c-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/fonts/nunito/Nunito-BlackItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Visual/iconos/classroom icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Visual/logo.png" type="Texture" id=4]
[ext_resource path="res://Assets/background/background cyan.png" type="Texture" id=5]
[ext_resource path="res://Assets/Visual/botones/whitecircle.png" type="Texture" id=6]
[ext_resource path="res://Assets/fonts/nunito/Nunito-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Visual/botones/large.png" type="Texture" id=8]
[ext_resource path="res://Scrips/UI/checkbox.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.282353 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/hoseu icon.png-9cc59ad260a25418438c1fc60858d415.stex"

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.486275 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=8]
size = 37
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 1536, 1024 )

[node name="OnboardingWho" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="buttonFalseContinue" type="TextureRect" parent="."]
margin_left = 372.0
margin_top = 500.0
margin_right = 918.0
margin_bottom = 829.0
texture = ExtResource( 8 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -199.0
margin_top = 5.0
margin_right = 1.0
margin_bottom = 205.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 4 )
expand = true

[node name="steps" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -449.0
margin_right = 30.0
margin_bottom = -288.0
custom_constants/separation = 2

[node name="step1" type="TextureRect" parent="steps"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true

[node name="step2" type="TextureRect" parent="steps"]
margin_top = 32.0
margin_right = 30.0
margin_bottom = 62.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true

[node name="step3" type="TextureRect" parent="steps"]
margin_top = 64.0
margin_right = 30.0
margin_bottom = 94.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true

[node name="step4" type="TextureRect" parent="steps"]
margin_top = 96.0
margin_right = 30.0
margin_bottom = 126.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true

[node name="step5" type="TextureRect" parent="steps"]
margin_top = 128.0
margin_right = 30.0
margin_bottom = 158.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true

[node name="CenterVBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -547.5
margin_top = 60.0
margin_right = 547.5
margin_bottom = 330.0
custom_constants/separation = 14

[node name="wholabel" type="Label" parent="CenterVBox"]
margin_right = 1095.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "¿Para quién será esta app?"
align = 1

[node name="WhoOptionsHBox" type="HBoxContainer" parent="CenterVBox"]
margin_top = 65.0
margin_right = 1095.0
margin_bottom = 330.0
custom_constants/separation = 30
alignment = 1

[node name="ClassVBox" type="VBoxContainer" parent="CenterVBox/WhoOptionsHBox"]
margin_left = 312.0
margin_right = 532.0
margin_bottom = 265.0

[node name="ClassButton" type="Button" parent="CenterVBox/WhoOptionsHBox/ClassVBox"]
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 220, 220 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 3 )
expand_icon = true

[node name="classroomLabel" type="Label" parent="CenterVBox/WhoOptionsHBox/ClassVBox"]
margin_top = 224.0
margin_right = 220.0
margin_bottom = 265.0
custom_fonts/font = SubResource( 3 )
text = "	Salon de clases"

[node name="ClassVBox2" type="VBoxContainer" parent="CenterVBox/WhoOptionsHBox"]
margin_left = 562.0
margin_right = 782.0
margin_bottom = 265.0

[node name="ClassButton" type="Button" parent="CenterVBox/WhoOptionsHBox/ClassVBox2"]
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 220, 220 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon = SubResource( 4 )
expand_icon = true

[node name="classroomLabel" type="Label" parent="CenterVBox/WhoOptionsHBox/ClassVBox2"]
margin_top = 224.0
margin_right = 220.0
margin_bottom = 265.0
custom_fonts/font = SubResource( 3 )
text = "Casa"
align = 1

[node name="QuestionReadLabel" type="Label" parent="CenterVBox"]
margin_top = 344.0
margin_right = 1095.0
margin_bottom = 395.0
custom_fonts/font = SubResource( 5 )
text = "¿El niño(a) sabe leer y escribir?"
align = 1

[node name="ReadOptionsHBox" type="HBoxContainer" parent="CenterVBox"]
margin_top = 409.0
margin_right = 1095.0
margin_bottom = 535.0
custom_constants/separation = 120
alignment = 1

[node name="yesVbox" type="VBoxContainer" parent="CenterVBox/ReadOptionsHBox"]
margin_left = 407.0
margin_right = 487.0
margin_bottom = 126.0

[node name="yesLabel" type="Label" parent="CenterVBox/ReadOptionsHBox/yesVbox"]
margin_right = 80.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 6 )
text = "Si"
align = 1

[node name="yesButton" type="Button" parent="CenterVBox/ReadOptionsHBox/yesVbox"]
margin_top = 46.0
margin_right = 80.0
margin_bottom = 126.0
rect_min_size = Vector2( 80, 80 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )

[node name="noVbox" type="VBoxContainer" parent="CenterVBox/ReadOptionsHBox"]
margin_left = 607.0
margin_right = 687.0
margin_bottom = 126.0

[node name="noLabel" type="Label" parent="CenterVBox/ReadOptionsHBox/noVbox"]
margin_right = 80.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 6 )
text = "No"
align = 1

[node name="noButton" type="Button" parent="CenterVBox/ReadOptionsHBox/noVbox"]
margin_top = 46.0
margin_right = 80.0
margin_bottom = 126.0
rect_min_size = Vector2( 80, 80 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -114.0
margin_right = 170.0
margin_bottom = -14.0
rect_min_size = Vector2( 100, 100 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Continuar"
flat = true
